# PlayOpenGL

./: .gitignore  CMakeLists.txt  README.md
PlayOpenGL/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  GLView.h  GLView.mm  IRenderingEngine.hpp  PlayOpenGL-Info.plist  PlayOpenGL-Prefix.pch  RenderingEngine1.cpp  RenderingEngine1.h  RenderingEngine2.cpp  main.mm
PlayOpenGL.xcodeproj/: project.pbxproj
PlayOpenGL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PlayOpenGL.xcodeproj/project.xcworkspace/xcshareddata/: PlayOpenGL.xccheckout
PlayOpenGL.xcodeproj/project.xcworkspace/xcuserdata/will.xcuserdatad/: UserInterfaceState.xcuserstate
PlayOpenGL.xcodeproj/xcuserdata/will.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
PlayOpenGL.xcodeproj/xcuserdata/will.xcuserdatad/xcschemes/: PlayOpenGL.xcscheme  xcschememanagement.plist
PlayOpenGL/Shaders/: Simple.frag  Simple.vert
PlayOpenGLTests/: PlayOpenGLTests-Info.plist  PlayOpenGLTests.h  PlayOpenGLTests.m
src/hello_glfw/: .clang-format  .dir-locals.el  CMakeLists.txt  antons_maths_funcs.cpp  antons_maths_funcs.h  build.bat  build.sh  build_and_run.bat  build_and_run.ps1  build_and_run.sh  hello.cpp  hello_common.h  hello_unix.cpp  hello_win32.cpp  maths.cpp  maths.h  project.4coder  run.bat  run.sh
