cmake_minimum_required(VERSION 3.10)
project(hello_glfw)

set(CMAKE_PREFIX_PATH "$ENV{USERPROFILE}/Downloads/glew-2.0.0-win32/glew-2.0.0")
set(CMAKE_LIBRARY_PATH "$ENV{USERPROFILE}/Downloads/glew-2.0.0-win32/glew-2.0.0/lib/Release/x64")
find_package(GLEW REQUIRED)
if (GLEW_FOUND)
    include_directories(${GLEW_INCLUDE_DIRS})
    link_libraries(${GLEW_LIBRARIES})
endif()

set(CMAKE_PREFIX_PATH "$ENV{USERPROFILE}/Downloads/glfw-3.3.3.bin.WIN64/glfw-3.3.3.bin.WIN64")
set(CMAKE_LIBRARY_PATH "$ENV{USERPROFILE}/Downloads/glfw-3.3.3.bin.WIN64/glfw-3.3.3.bin.WIN64/lib-vc2019")
find_package(glfw3 3.3.3 REQUIRED)
if (GLFW3_FOUND)
    include_directories(${GLFW3_INCLUDE_DIRS})
    link_libraries(${GLFW_LIBRARIES})
endif()

if(WIN32)
    set(SOURCE_FILES hello_win32.cpp)
else()
    set(SOURCE_FILES hello_unix.cpp)
endif()
set(RUNTIME_OUTPUT_DIRECTORY build)
if(WIN32)
    add_executable(hello_win32 ${SOURCE_FILES})
else()
    add_executable(hello_unix ${SOURCE_FILES})
endif()
